2011-01-28  Masaaki Aoyagi

	* lib/mkmf-gnome2.rb: fix check_cairo.

2011-01-21  Masaaki Aoyagi

	* lib/gnome2-raketask.rb: add.

	* Rakefile: change to use gnome2-raketask.rb.

2011-01-02  Kouhei Sutou  <kou@cozmixng.org>

	* lib/mkmf-gnome2.rb: support "2.0b7" style module
	version for xulrunner-2.0b7. #3141244
	Reported by reandr. Thanks!!!

2010-11-04  Nikolai Weibull

	* lib/glib2.rb: Use ::File to access Ruby File class.

2010-10-30  Kouhei Sutou  <kou@cozmixng.org>

	* ext/glib2/rbgobj_type.c (rbgobj_gtype_new): fix GType
	conversion. GType is unsigned long not unsigned int.

2010-10-28  Kouhei Sutou  <kou@clear-code.com>

	* ext/glib2/rbglib.h: 0.90.5 -> 0.90.6.

2010-10-27  Kouhei Sutou  <kou@clear-code.com>

	* lib/glib-mkenums.rb: work on LANG=C environment.

	* Rakefile: depend on pkg-config as not development library.

2010-10-24  Kouhei Sutou  <kou@cozmixng.org>

	* ext/glib2/rbglib.h: 0.90.4 -> 0.90.5.

2010-10-24  Kouhei Sutou  <kou@clear-code.com>

	* ext/glib2/rbglib.c (rbg_rval2cstr): add missing '*'.
	[#3093789]
	Reported by tmtms. Thanks!!!

2010-10-23  Kouhei Sutou  <kou@cozmixng.org>

	* ext/glib2/rbglib.h: 0.90.3 -> 0.90.4.

	* ext/glib2/glib2.def: add missing exported symbols.

	* lib/mkmf-gnome2.rb: ignore nonexistent directory.

	* ext/glib2/rbglib.c, ext/glib2/rbglib.h:
	fix alived string may be GCed in RVAL2CSTR and
	RVAL2CSTR_ACCEPT_NIL problem.
	Suggested by Neil Roberts. Thanks!!!

2010-10-21  Kouhei Sutou  <kou@cozmixng.org>

	* ext/glib2/rbgobj_paramspecs.c: add missing type declarations.
	Reported by Nobuyoshi Nakada. Thanks!!!

2010-10-08  Guillaume Cottenceau

	* fix some uses of rb_str_new* and StringValuePtr to use
	encoding-aware Strings

2010-10-08  Guillaume Cottenceau

	* RVAL2CSTR2 is deprecated, replace with RVAL2CSTR_ACCEPT_NIL

	* CSTR2RVAL2 is deprecated, replace with CSTR2RVAL_FREE

2010-10-07  Guillaume Cottenceau

	* ext/glib2/rbglib.c, ext/glib2/rbglib.h, ext/glib2/glib2.def,